v3.22.0 (MMM’21)
  * Asynchronously load the comments feed
  * Improve accessibility:
    - Add alt text to any linked images
    - Add screen reader only text to forms
    - Adjustments to font and element contrast to meet at minimum Level AA WCAG 2.0 standards.
    - Fix any broken Aria references
    - Update element label association & add missing labels
  * Truncate long hostnames when viewing evidence in an issue
  * Upgraded gems: [gem #1], [gem #2]
  * Bugs fixed:
    - [bug fixed #1]
    - [bug fixed ...]
    - Bug tracker items: #N, #M, #O, ...
  * New integrations:
    - [new integration #1]
    - [new integration ...]
  * Integration enhancements:
    - [integration enhancement #1]
    - [integration enhancement ...]
  * Reporting enhancements:
    - [reporting enhancement #1]
    - [reporting enhancement ...]
  * REST/JSON API enhancements:
    - [API enhancement #1]
    - [API enhancement ...]
  * Security Fixes:
    - High: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Medium: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Low: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]

v3.21.0 (February 2021)
  * Upgraded DradisPro to run on Ruby 2.7.2 and Rails 6.1.1
  * Add view hooks for the export view
  * Increase secondary sidebar width for medium viewports
  * Upgraded gems: bundler, papertrail, rails
  * Bugs fixed:
    - Add a default user during Welcome setup
    - Correct position of sticky editor toolbar in fullscreen source view

v3.20.0 (January 2021)
  * Main sidebar improvements:
    - Labels added under icons
    - Nodes can be added in collapsed state
    - Removed animations and transitions while expanding and collapsing
  * Update logo assets
  * Navbar dropdown menu's are no longer locked to the right side of the browser
  * Upgraded gems: rails
  * Bugs fixed: