@@ -34,7 +34,6 @@ class NotesController < NestedNodeResourceController
   # Retrieve a Note given its :id
   def show
     @activities = @note.activities.latest
-    @subscription = @note.subscription_for(user: current_user)
     load_conflicting_revisions(@note)
   end
 
